--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
-  "routes": [
-    { "handle": "filesystem" },
+  "rewrites": [
     {
-      "src": "/(.*)(\\/)?",
-      "dest": "/index.html"
+      "source": "/api/(.*)",
+      "destination": "https://api.timbu.cloud/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
